Fix H1 on small screens

--- a/style.css
+++ b/style.css
@@ -288,6 +288,7 @@ body[data-theme="light"] .light-on {
 
     h1 {
         font-size: 4rem;
+        letter-spacing: unset;
     }
 
     h2 {
